2008-04-13 Travis Willard <travis@archlinux.org>

	* 0.6.1-1
	Added ChangeLog
	New upstream release.