@@ -1,29 +1,24 @@
 # $Id$
-
-# Maintainer: Travis Willard <travis@archlinux.org> 
+# Maintainer: Alexander Fehr <pizzapunk gmail com>
 # Contributor: Brad Gordon <brad@rpgcyco.net>
 
 pkgname=libmowgli
-pkgver=0.6.1
+pkgver=0.7.0
 pkgrel=1
-pkgdesc="Development framework for C"
+pkgdesc="Class library containing performance and usability oriented extensions to C"
 arch=('i686' 'x86_64')
-url="http://www.atheme.org/projects/mowgli.shtml"
-license=('BSD')
+url="http://www.atheme.org/Projects/Libmowgli"
+license=('custom')
 depends=('glibc')
-makedepends=('pkgconfig')
-options=('!libtool')
-source=(http://distfiles.atheme.org/${pkgname}-${pkgver}.tgz)
-md5sums=('80f8a27f1b44b0b129215f858ab1ab82')
+source=(http://distfiles.atheme.org/libmowgli-$pkgver.tbz2)
+md5sums=('b4666d37ae78358ca5d1833f4e706b3c')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "$srcdir/libmowgli-$pkgver"
 
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install
+  make DESTDIR="$pkgdir" install || return 1
 
-  install -m644 -D ${startdir}/src/${pkgname}-${pkgver}/COPYING \
-                   ${startdir}/pkg/usr/share/licenses/${pkgname}/COPYING
+  install -D -m644 COPYING "$pkgdir/usr/share/licenses/libmowgli/COPYING" || return 1
 }
-
