@@ -1,5 +1,13 @@
-2008-04-13 Travis Willard <travis@archlinux.org>
+2008-08-10  Alexander Fehr  <pizzapunk gmail com>
 
-	* 0.6.1-1
-	Added ChangeLog
-	New upstream release.
+  * libmowgli-0.7.0-1:
+  New upstream release.
+  New maintainer.
+  Changed url.
+  Changed license to custom.
+
+2008-04-13  Travis Willard  <travis@archlinux.org>
+
+  * libmowgli-0.6.1-1:
+  New upstream release.
+  Added ChangeLog.
